--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.16",
     "@tailwindcss/typography": "^0.5.4",
+    "@thirdweb-dev/react": "^4.1.8",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
