MVP: can send and receive chats switch to pnpm from bun

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.16",
     "@tailwindcss/typography": "^0.5.4",
+    "@tanstack/query-sync-storage-persister": "^5.8.3",
+    "@tanstack/react-query": "^5.8.4",
+    "@tanstack/react-query-persist-client": "^5.8.4",
     "@thirdweb-dev/react": "^4.1.8",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
@@ -29,6 +32,7 @@
     "next": "13.4.16",
     "next-themes": "^0.2.1",
     "openai": "^4.19.0",
+    "pino-pretty": "^10.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "^3.0.1",
